--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,13 @@
+title: Jung Sup Lee's Website
+email: jlee4255@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Welcome to Jung Sup Lee's personal website.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://jungsuplee-com.pages.dev" # the base hostname & protocol for your site
+github_username: jlee4255
+
+markdown: kramdown
 theme: jekyll-theme-minimal
-title: JungSup lee
-description: A description of your site
+
+plugins:
+  - jekyll-feed
